agregada funcion para limpiar la cache, agregados los iconos tango, mejoras en la interfaz, otros cambios menores

--- a/Radio21/Radio21.csproj
+++ b/Radio21/Radio21.csproj
@@ -9,6 +9,7 @@
     <AssemblyName>Radio21</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <NoWin32Manifest>False</NoWin32Manifest>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
